# figure_parser

./: .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  Makefile  README.md  SUPPORT_SITES.md  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: new-parser-request.md
.github/workflows/: ci.yml  parser_reliablity_check.yml  publish.yml  reliablity_check.yml  tox.yml
docs/: conf.py  figure_parser.alter.rst  figure_parser.gsc.rst  figure_parser.native.rst  figure_parser.rst  index.rst  modules.rst  requirements.txt
docs/reference/: figure_parser.abcs.rst  figure_parser.constants.rst  figure_parser.exceptions.rst  figure_parser.factory.rst  index.rst
docs/reference/parsers/: figure_parser.alter.rst  figure_parser.native.rst
docs/source/: conf.py  requirements.txt
docs/source/reference/: figure_parser.abcs.rst  figure_parser.exceptions.rst  figure_parser.product.rst  figure_parser.utils.rst  index.rst
docs/source/reference/parsers/: figure_parser.gsc.rst  index.rst
figure_parser/: __init__.py  abcs.py  base_factory.py  base_parser.py  entities.py  enums.py  exceptions.py  extension_class.py  factories.py  factory.py  pipes.py  product.py  utils.py
figure_parser/alter/: __init__.py  announcecment_parser.py  product_parser.py
figure_parser/core/: __init__.py  exceptions.py  factory_base.py  parser_base.py
figure_parser/core/entities/: release.py
figure_parser/core/entity/: __init__.py  enums.py  exceptions.py  order_period.py  product.py  release.py
figure_parser/core/factory/: base.py  exceptions.py  interface.py
figure_parser/core/models/: order_period.py  product.py  release.py
figure_parser/core/parser/: base.py  exceptions.py  interface.py
figure_parser/core/pipe/: interface.py  nomalization.py  nomalization_pipe.py  sorting.py  sorting_pipe.py
figure_parser/core/tools/: normalize_product.py  sort_release.py
figure_parser/core/usecase/: sort_release.py
figure_parser/gsc/: announcement_parser.py  product_parser.py  shipment_parser.py
figure_parser/native/: announcement_parser.py  product_parser.py
figure_parser/parsers/: __init__.py  base.py  utils.py
figure_parser/parsers/alter/: __init__.py  product_parser.py
figure_parser/parsers/amakuni/: __init__.py  product_parser.py
figure_parser/parsers/gsc/: __init__.py  product_parser.py
figure_parser/parsers/gsc/locale/: gsc_parse.yml
figure_parser/parsers/native/: __init__.py  product_parser.py
figure_parser/pipes/: __init__.py  nomalization.py  sorting.py
src/figure_parser/: __init__.py  abcs.py  constants.py  extension_class.py  product.py  utils.py
src/figure_parser/alter/: product_parser.py
src/figure_parser/gsc/: __init__.py  announcement_parser.py
src/figure_parser/native/: __init__.py  announcement_parser.py
templates/: parsers_init.mako  parsers_module_init.mako  product_parser.mako  product_parser_test.mako  site_module_init.mako  test_case.mako
tests/: conftest.py  test_custom_class.py  test_errors.py  test_exceptions.py  test_factory.py  test_product.py  test_product_factory.py  test_utils.py
tests/test_entities/: test_order_period.py  test_product.py  test_release.py
tests/test_entity/: test_order_period.py
tests/test_models/: test_order_period.py  test_release.py
tests/test_parser/: test_product_parser.py  test_release_parser.py  test_shipment_parser.py
tests/test_parser/test_case/: alter_products.yml  gsc_products.yml  native_products.yml
tests/test_parsers/: test_alter_product_parser.py  test_amakuni_product_parser.py  test_gsc_product_parser.py  test_native_product_parser.py  test_product_parser.py
tests/test_parsers/product_case/: alter.yml  alter_products.yml  amakuni.yml  gsc.yml  gsc_products.yml  native.yml  templates  templates.yml
tests/test_pipes/: test_product_normalize.py  test_sort_release.py
tests/test_tools/: test_product_normalize.py  test_sort_release.py
tests/test_usecase/: test_product_normalize.py
