[tool.poetry]
name = "figure_parser"
version = "0.0.3"
description = "Parser for figure"
authors = ["Elton Chou <plscd748@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FigureHook/figure_parser"
keywords = [
    "parser",
    "figure"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
include = [
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = ">=4.9.3"
lxml = ">=4.6.5"
requests = ">=2.25.1"
PyYAML = "^5.2"
feedparser = "^6.0.8"
aiohttp = "^3.7.4"
pytz = "^2021.1"
toml = "^0.10.2"
Sphinx = { version =" ^4.0.3", optional = true }
furo = { version = "^2021.7.5-beta.38", optional = true }
sphinx-autodoc-typehints = { version = "^1.12.0", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
coverage = "^5.5"
pytest-mock = "^3.6.1"
pytest = "^6.2.4"
Faker = "^8.10.0"
tox = "^3.23.1"
coveralls = "^3.3.1"

[tool.poetry.extras]
docs = [
    "Sphinx",
    "furo",
    "sphinx-autodoc-typehints"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
