[tool.poetry]
name = "figure_parser"
version = "0.1.0"
description = "Parser for figure"
authors = ["Elton Chou <plscd748@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FigureHook/figure_parser"
keywords = ["parser", "figure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = ">=4.9.3"
lxml = ">=4.6.5"
PyYAML = "^6.0"
pytz = "^2021.1"
toml = "^0.10.2"
pydantic = "^1.9.1"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
coverage = "^6.0"
pytest-mock = "^3.6.1"
pytest = "^6.2.4"
Faker = "^8.10.0"
tox = "^3.23.1"
pytest-xdist = { extras = ["psutil"], version = "^2.5.0" }
aiohttp = "^3.8.1"
requests = "^2.31.0"
mypy = "^0.971"
types-PyYAML = "^6.0.11"
types-beautifulsoup4 = "^4.11.6"
black = "^22.8.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
Mako = "^1.2.3"
inflection = "^0.5.1"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["figure_parser/**/*.py"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["figure_parser", "tests"]
